--- a/demo/feature_center/build.gradle
+++ b/demo/feature_center/build.gradle
@@ -36,6 +36,6 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.3.1'
     implementation 'androidx.appcompat:appcompat:1.2.0'
 
-    kapt(project(':mdp-processor'))
-    api(project(':mdp-processor'))
+    kapt(project(':mpd-processor'))
+    api(project(':mpd-processor'))
 }
