--- a/settings.gradle
+++ b/settings.gradle
@@ -10,4 +10,4 @@ include_project("demo", "feature_center")
 include_project("demo", "module-a")
 include_project("demo", "module-b")
 
-include ':mdp-processor'
+include ':mpd-processor'
